# sage-papers

./: docker-compose.yml
.github/workflows/: elasticsearch.yml  web.yml
elasticsearch/: Dockerfile
web/: Dockerfile  pyproject.toml  web.py
web/static/: main.css  main.js
web/templates/: _base.html  by_meeting.html  index.html  paper.html
web/util/: index_sage.py
